# OceanHackaton2021_GUI

./: .gitignore  readme.md
gui/: CMakeLists.txt
gui/include/gui/: colorIndicator.h  extprocess.h  mainwindow.h  patata.h  tabManager.h  test.h
gui/resources/: ManjaroMix_bkp.qss  hackathon.qss
gui/src/: colorIndicator.cpp  extprocess.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  patata.cpp  tabManager.cpp  test.cpp
gui/test/: mainwindow.cpp  mainwindow.ui
qtest/: CMakeLists.txt
